<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sleep">

    <fragment
        android:id="@+id/navigation_sleep"
        android:name="com.example.smartsleep.ui.sleep.SleepFragment"
        android:label="@string/title_sleep"
        tools:layout="@layout/fragment_sleep" >
        <action
            android:id="@+id/action_navigation_sleep_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.smartsleep.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.smartsleep.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
