<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/ProfileTitle"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center"
        android:text="@string/profile_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProfileDate"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:gravity="center|fill_vertical"
        android:text="Date"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/wentToBedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileTitle" />

    <Button
        android:id="@+id/PreviousButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:foreground="@drawable/ic_navigate_before_black_18dp"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/wentToBedText"
        app:layout_constraintEnd_toStartOf="@+id/ProfileDate"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileTitle" />

    <Button
        android:id="@+id/NextButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:foreground="@drawable/ic_navigate_next_24px"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/wentToBedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/ProfileDate"
        app:layout_constraintTop_toBottomOf="@+id/ProfileTitle" />

    <TextView
        android:id="@+id/timeSleptText"
        android:layout_width="335dp"
        android:layout_height="82dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:text="Time Slept: "
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wokeUpText" />

    <TextView
        android:id="@+id/wokeUpText"
        android:layout_width="335dp"
        android:layout_height="82dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:text="Woke Up: "
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/timeSleptText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wentToBedText"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/wentToBedText"
        android:layout_width="335dp"
        android:layout_height="82dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center"
        android:paddingLeft="75dp"
        android:text="Went to bed: "
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/wokeUpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileDate" />

    <ImageView
        android:id="@+id/wentToBedImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/profile_sleep_image_description"
        android:src="@drawable/ic_nights_stay_24px"
        app:layout_constraintBottom_toBottomOf="@+id/wentToBedText"
        app:layout_constraintStart_toStartOf="@+id/wentToBedText"
        app:layout_constraintTop_toTopOf="@+id/wentToBedText" />

    <ImageView
        android:id="@+id/wokeUpImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/profile_wake_image_description"
        android:src="@drawable/ic_sun_black_18dp"
        app:layout_constraintBottom_toBottomOf="@+id/wokeUpText"
        app:layout_constraintStart_toStartOf="@+id/wokeUpText"
        app:layout_constraintTop_toTopOf="@+id/wokeUpText" />

    <ImageView
        android:id="@+id/timeSleptImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/profile_time_image_description"
        android:src="@drawable/ic_clock_24px"
        app:layout_constraintBottom_toBottomOf="@+id/timeSleptText"
        app:layout_constraintStart_toStartOf="@+id/timeSleptText"
        app:layout_constraintTop_toTopOf="@+id/timeSleptText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

</androidx.constraintlayout.widget.ConstraintLayout>