<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sleep.SleepFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/statsGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <TextView
        android:id="@+id/statsTitle2"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center"
        android:text="@string/sleep_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/statsGuide2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputSleepText2"
        android:layout_width="335dp"
        android:layout_height="120dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center_horizontal"
        android:paddingBottom="40dp"
        android:text="@string/sleep_input_wakeup_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/saveInputButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSleepText" />

    <TextView
        android:id="@+id/inputSleepText"
        android:layout_width="335dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/sleepBlue"
        android:gravity="center_horizontal"
        android:text="@string/sleep_input_bedtime_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bedtimeTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText"
        app:layout_constraintStart_toStartOf="@+id/inputSleepText"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText" />

    <TextView
        android:id="@+id/bedtimeDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText"
        app:layout_constraintStart_toStartOf="@+id/inputSleepText"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText" />

    <TextView
        android:id="@+id/wakeUpTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText2"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText2"
        app:layout_constraintStart_toStartOf="@+id/inputSleepText2"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText2" />

    <TextView
        android:id="@+id/wakeUpDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText2"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText2"
        app:layout_constraintStart_toStartOf="@+id/inputSleepText2"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText2" />

    <Button
        android:id="@+id/downArrowBedtime"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/ic_baseline_access_time_24"
        android:outlineProvider="none"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/downArrowBedDate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/ic_baseline_date_range_24"
        android:outlineProvider="none"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/saveInputButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/sleepBlue"
        android:text="@string/sleep_save_button_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/downArrowWakeUpTime"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/ic_baseline_access_time_24"
        android:outlineProvider="none"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText2"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText2"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText2" />

    <Button
        android:id="@+id/downArrowWakeDate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/ic_baseline_date_range_24"
        android:outlineProvider="none"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/inputSleepText2"
        app:layout_constraintEnd_toEndOf="@+id/inputSleepText2"
        app:layout_constraintTop_toTopOf="@+id/inputSleepText2" />
</androidx.constraintlayout.widget.ConstraintLayout>